tests/ui/intrinsics/safe-intrinsic-mismatch.stderr
error: intrinsic safety mismatch between list of intrinsics within the compiler and core library intrinsics for intrinsic `size_of`
  --> $DIR/safe-intrinsic-mismatch.rs:5:5
   |
LL |     fn size_of<T>() -> usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: intrinsic safety mismatch between list of intrinsics within the compiler and core library intrinsics for intrinsic `assume`
  --> $DIR/safe-intrinsic-mismatch.rs:9:5
   |
LL |     fn assume(b: bool);
   |     ^^^^^^^^^^^^^^^^^^

error: intrinsic safety mismatch between list of intrinsics within the compiler and core library intrinsics for intrinsic `size_of`
  --> $DIR/safe-intrinsic-mismatch.rs:5:5
   |
LL |     fn size_of<T>() -> usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: intrinsic safety mismatch between list of intrinsics within the compiler and core library intrinsics for intrinsic `assume`
  --> $DIR/safe-intrinsic-mismatch.rs:9:5
   |
LL |     fn assume(b: bool);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

